<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="4dp" >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"

            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/kareh_image"
                android:layout_width="wrap_content"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:layout_weight="10"
                android:layout_height="0dp"
                app:srcCompat="@drawable/kareh"
                android:tooltipText="@string/username"
                android:contentDescription="@string/username"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/kareh_image"
                android:layout_alignTop="@id/kareh_image"
                android:layout_alignRight="@id/kareh_image"
                android:layout_alignBottom="@id/kareh_image"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Esther Wangari Waweru"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                app:fontFamily="@font/roboto_thin" />



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/track_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/country_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/email_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/phone_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>