<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/welcome_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_mono_thin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="212dp"
        android:background="#FF5722"
        android:includeFontPadding="true"
        android:text="@string/about_string"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_welcome"
        app:layout_constraintStart_toStartOf="@+id/text_welcome"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FF5722"
        android:text="@string/profile_text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/about_btn"
        app:layout_constraintStart_toStartOf="@+id/about_btn"
        app:layout_constraintTop_toBottomOf="@+id/about_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>